tests/ui/traits/associated_type_bound/check-trait-object-bounds-2.stderr
error[E0277]: the trait `X<'_>` is not implemented for `dyn for<'a> X<'a, F = i32>`
  --> $DIR/check-trait-object-bounds-2.rs:13:9
   |
LL |     f::<dyn for<'x> X<'x, F = i32>>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `X<'_>` is not implemented for `dyn for<'a> X<'a, F = i32>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/check-trait-object-bounds-2.rs:4:1
   |
LL | trait X<'a> {
   | ^^^^^^^^^^^
note: required by a bound in `f`
  --> $DIR/check-trait-object-bounds-2.rs:8:9
   |
LL | fn f<T: for<'r> X<'r> + ?Sized>() {
   |         ^^^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
